/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'groovy'
    id 'maven-publish'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}


javafx {
    version = "17+"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
}

application {
    mainClass = 'cz.zcu.jsmahy.datamining.Main'
    applicationDefaultJvmArgs = ["--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED",
                                 "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
                                 "--add-exports", "javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
                                 "--add-exports", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
                                 "--add-exports", "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
                                 "--add-exports", "javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
    ]
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.jetbrains:annotations:23.0.0'

    implementation 'org.jetbrains:annotations:23.0.0'
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    implementation 'org.openjfx:javafx-base:17+'
    implementation 'org.openjfx:javafx-controls:17+'
    implementation 'org.openjfx:javafx-graphics:17+'
    implementation 'org.openjfx:javafx-fxml:17+'
    implementation 'org.openjfx:javafx-web:17+'
    implementation 'org.openjfx:javafx-media:17+'
    implementation 'org.openjfx:javafx-swing:17+'
    implementation 'org.slf4j:slf4j-api:2.0.6'
    implementation 'org.slf4j:slf4j-simple:2.0.6'
    implementation 'com.dlsc.formsfx:formsfx-core:11.6.0'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
//    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
    implementation 'com.jfoenix:jfoenix:9.0.10'
    implementation 'commons-cli:commons-cli:1.5.0'
    implementation 'org.apache.jena:jena-core:4.7.0'
    implementation 'org.apache.jena:jena-arq:4.7.0'
    implementation 'org.apache.jena:jena-iri:4.7.0'
    implementation 'org.apache.commons:commons-configuration2:2.8.0'
    implementation 'com.google.inject:guice:5.1.0'
    implementation 'org.yaml:snakeyaml:+'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'

    testImplementation 'net.synedra:validatorfx:0.4.0'
    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
    testImplementation 'org.testfx:testfx-spock:4.0.16-alpha'
    testImplementation 'org.assertj:assertj-core:3.24.1'
    testImplementation 'org.jfxtras:openjfx-monocle:1.8.0_20'
}

group = 'cz.zcu.jsmahy'
version = '1.0'
description = 'DataMining'
java.sourceCompatibility = JavaVersion.VERSION_17

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}

mainClassName = 'cz.zcu.jsmahy.Main'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
    systemProperties['testfx.robot'] = 'glass'
//    systemProperties['testfx.headless'] = 'true'
    systemProperties['prism.order'] = 'sw'
    systemProperties['prism.text'] = 't2k'
    jvmArgs = ["--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED",
               "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
               "--add-exports", "javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
               "--add-exports", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",]
}
